# pico-skills-registry

./: AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  smoke.sh
.github/workflows/: ci.yml  publish-image.yml
config/: application.yaml
example-catalog/skills/deploy-service/: SKILL.md
example-catalog/skills/deploy-service/resources/: rollout.sh
example-catalog/skills/hello-world/: SKILL.md
example-catalog/skills/rotate-secrets/: SKILL.md
src/skills_registry/: __init__.py  app.py  catalog.py  contract.py  main.py  models.py  service.py  store.py
tests/: test_registry.py
validation/: populate_and_check.py
