[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-skills-registry"
version = "0.1.0"
description = "Self-hostable, authenticated skills registry for coding agents"
requires-python = ">=3.11"
dependencies = [
    "pico-ioc[yaml]>=2.3.3",
    "pico-fastapi>=0.3.1",
    "pico-server-auth>=0.2.1",
    "pico-client-auth>=0.5.0",
    "pico-actuator>=0.2.1",
    "pico-sqlalchemy>=0.5.1",
    "aiosqlite>=0.20",
    "uvicorn>=0.30",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio", "pico-testing>=0.2.0", "httpx", "ruff"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pico_module = "skills_registry"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "C901"]
ignore = ["E501"]
